--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "laustdeleuran.github.io",
-  "private": true,
-  "description": "Personal / professional site for Laust J Deleuran",
-  "version": "0.1.0",
-  "author": "Laust Deleuran <hello@ljd.dk>",
-  "dependencies": {
-    "@emotion/react": "^11.1.2",
-    "@emotion/styled": "^11.0.0",
-    "@types/helmet": "^4.0.0",
-    "gatsby": "^2.30.1",
-    "gatsby-image": "^2.7.0",
-    "gatsby-plugin-emotion": "^5.0.0",
-    "gatsby-plugin-manifest": "^2.8.0",
-    "gatsby-plugin-offline": "^3.6.0",
-    "gatsby-plugin-react-helmet": "^3.6.0",
-    "gatsby-plugin-sharp": "^2.10.0",
-    "gatsby-source-filesystem": "^2.7.0",
-    "gatsby-transformer-remark": "^2.12.0",
-    "gatsby-transformer-sharp": "^2.8.0",
-    "gh-pages": "^3.1.0",
-    "hex-rgb": "^4.2.0",
-    "humanize-duration": "^3.25.1",
-    "prettier": "^2.2.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "react-player": "^2.7.2"
-  },
-  "license": "WTFPL",
-  "scripts": {
-    "build": "gatsby build",
-    "clean": "gatsby clean",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "serve": "gatsby serve",
-    "start": "npm run develop",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/laustdeleuran/laustdeleuran.github.io"
-  }
+	"name": "ljd.dk",
+	"version": "1.0.0",
+	"private": true,
+	"description": "ljd.dk",
+	"author": "Laust Deleuran",
+	"keywords": [
+		"gatsby"
+	],
+	"scripts": {
+		"build": "gatsby build",
+		"clean": "gatsby clean",
+		"deploy": "gatsby build --prefix-paths && gh-pages -d public",
+		"develop": "gatsby develop",
+		"serve": "gatsby serve",
+		"start": "gatsby develop",
+		"typecheck": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
+		"@mdx-js/react": "^2.3.0",
+		"gatsby": "^5.10.0",
+		"gatsby-plugin-emotion": "^8.10.0",
+		"gatsby-plugin-image": "^3.10.0",
+		"gatsby-plugin-manifest": "^5.10.0",
+		"gatsby-plugin-mdx": "^5.10.0",
+		"gatsby-plugin-sharp": "^5.10.0",
+		"gatsby-plugin-sitemap": "^6.10.0",
+		"gatsby-source-filesystem": "^5.10.0",
+		"gatsby-transformer-remark": "^6.10.0",
+		"gatsby-transformer-sharp": "^5.10.0",
+		"gh-pages": "^5.0.0",
+		"hex-rgb": "^5.0.0",
+		"humanize-duration": "^3.28.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
+		"react-player": "^2.12.0"
+	},
+	"devDependencies": {
+		"@types/node": "^20.2.5",
+		"@types/react": "^18.2.7",
+		"@types/react-dom": "^18.2.4",
+		"typescript": "^5.0.4"
+	}
 }
