--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"gatsby-plugin-manifest": "^5.10.0",
 		"gatsby-plugin-mdx": "^5.10.0",
 		"gatsby-plugin-sharp": "^5.10.0",
+		"gatsby-plugin-sharp-exif": "^2.0.0",
 		"gatsby-plugin-sitemap": "^6.10.0",
 		"gatsby-source-filesystem": "^5.10.0",
 		"gatsby-transformer-remark": "^6.10.0",
