--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
 		"react-player": "^2.12.0"
 	},
 	"devDependencies": {
+		"@types/humanize-duration": "^3.27.3",
 		"@types/node": "^20.2.5",
 		"@types/react": "^18.2.7",
 		"@types/react-dom": "^18.2.4",
+		"@types/react-helmet": "^6.1.9",
 		"typescript": "^5.0.4"
 	}
 }
